656 - Fix v2 media gallery on iOS

--- a/blocks/v2-media-gallery/v2-media-gallery.css
+++ b/blocks/v2-media-gallery/v2-media-gallery.css
@@ -80,10 +80,7 @@
 }
 
 .v2-media-gallery__figure {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
+  margin: 0 0 8px;
 }
 
 .v2-media-gallery__figure picture {
@@ -91,6 +88,7 @@
   display: block;
   background-color: var(--media-background);
   border-radius: var(--border-radius);
+  margin: 4px;
 }
 
 .v2-media-gallery__image {
